# communication-tests

./: .gitignore  CMakeLists.txt  README.md  common.h  communication.h  configure.sh  py_module.cpp  run_all_tests.py  test_actions.py
.github/workflows/: build_and_test.yml  build_test_win.yml  main.yml  test_serial.yml
file_comm/: add_file_comm_to_python.h  add_filesystem_to_python.h  file_comm.h  file_comm_file_system.h  file_comm_utils.h
file_comm/inc/: file_comm.h  file_comm_utils.h
file_comm/python/: add_file_comm_to_python.cpp
file_comm/tests/: test_file_comm.py
interprocess_comm/: add_interprocess_comm_to_python.h  interprocess_comm.h
mpi_comm/: add_mpi_comm_to_python.h  add_mpi_to_python.h  mpi_comm.h
mpi_comm/python/: add_mpi_comm_to_python.cpp
sockets_comm/: add_sockets_comm_to_python.h  sockets_comm.h
sockets_comm/inc/: sockets_comm.h
sockets_comm/python/: add_sockets_comm_to_python.cpp
tests/: base_communication_test.py  communication_tests.py  run_all_tests.py  test_file_comm.py  test_file_system.py  test_interprocess_comm.py  test_mpi_comm.py  test_sockets_comm.py
